# Life-Sidekick-Telegram-Bot

./: .replit  coqui_synthesizer.py  main.py  pyproject.toml
