[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Armando Santana <armanod@lumate.ai>"]

[tool.poetry.dependencies]
urllib3="<=2.0"
python = ">=3.8.1,<3.12"
mypy = "^1.3.0"
black = "^23.3.0"
speechrecognition = "^3.10.0"
aiohttp = "^3.8.4"
google-cloud-speech = "^2.19.0"
requests = "^2.31.0"
openai = "^0.27.7"
pydub = "^0.25.1"
vocode = "^0.1.110"
replit = "^3.3.0"
python-telegram-bot = "^20.3"
google-cloud-texttospeech = "^2.14.1"
mixpanel-python = "0.0.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"